@startuml

title __GUI's Class Diagram__\n

class Controller.CarController {
  ~ cars : ArrayList<MotorizedVehicle>
  - delay : int
  - timer : Timer
  {static} + main()
  + setInBounds()
  ~ brake()
  ~ gas()
  ~ lowerFlatbed()
  ~ outOfBounds()
  ~ raiseFlatbed()
  ~ setTurboOff()
  ~ setTurboOn()
  ~ startAllCars()
  ~ stopAllCars()
}

class Controller.CarController.TimerListener {
  + actionPerformed()
}

class View.GUI.CarView {
  ~ brakeButton : JButton
  ~ controlPanel : JPanel
  ~ gasAmount : int
  ~ gasButton : JButton
  ~ gasLabel : JLabel
  ~ gasPanel : JPanel
  ~ gasSpinner : JSpinner
  ~ liftBedButton : JButton
  ~ lowerBedButton : JButton
  ~ startButton : JButton
  ~ stopButton : JButton
  ~ turboOffButton : JButton
  ~ turboOnButton : JButton
  {static} - X : int
  {static} - Y : int
  + CarView()
  - initComponents()
}

class View.GUI.DrawPanel {
  ~ carImages : ArrayList<BufferedImage>
  ~ carPoints : ArrayList<Point>
  + DrawPanel()
  # paintComponent()
  ~ moveit()
}

  Controller.CarController o-- View.GUI.CarView : frame
  Controller.CarController +-down- Controller.CarController.TimerListener
  Controller.CarController.TimerListener .up.|> java.awt.event.ActionListener
  View.GUI.CarView -up-|> javax.swing.JFrame
  View.GUI.CarView o-- Controller.CarController : carC
  View.GUI.CarView o-- View.GUI.DrawPanel : drawPanel
  View.GUI.DrawPanel -up-|> javax.swing.JPanel

@enduml
